// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PolicyProfileForm form component should render adding form variant 1`] = `
<Loading
  className="export-spinner"
  small={true}
  withOverlay={false}
/>
`;

exports[`PolicyProfileForm form component should render editing form variant 1`] = `
<Provider
  store={
    Object {
      "asyncReducers": Object {
        "FormButtons": [Function],
        "miqCustomTabReducer": [Function],
        "notificationReducer": [Function],
      },
      "dispatch": [Function],
      "getState": [Function],
      "injectReducers": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <PolicyProfileForm
    recordId="1"
  >
    <Loading
      className="export-spinner"
      small={true}
      withOverlay={false}
    >
      <div
        aria-atomic="true"
        aria-live="assertive"
        className="export-spinner cds--loading cds--loading--small"
      >
        <svg
          className="cds--loading__svg"
          viewBox="0 0 100 100"
        >
          <title>
            loading
          </title>
          <circle
            className="cds--loading__background"
            cx="50%"
            cy="50%"
            r="42"
          />
          <circle
            className="cds--loading__stroke"
            cx="50%"
            cy="50%"
            r="42"
          />
        </svg>
      </div>
    </Loading>
  </PolicyProfileForm>
</Provider>
`;

exports[`PolicyProfileForm form component should render new form variant 1`] = `
<Provider
  store={
    Object {
      "asyncReducers": Object {
        "FormButtons": [Function],
        "miqCustomTabReducer": [Function],
        "notificationReducer": [Function],
      },
      "dispatch": [Function],
      "getState": [Function],
      "injectReducers": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <PolicyProfileForm>
    <Loading
      className="export-spinner"
      small={true}
      withOverlay={false}
    >
      <div
        aria-atomic="true"
        aria-live="assertive"
        className="export-spinner cds--loading cds--loading--small"
      >
        <svg
          className="cds--loading__svg"
          viewBox="0 0 100 100"
        >
          <title>
            loading
          </title>
          <circle
            className="cds--loading__background"
            cx="50%"
            cy="50%"
            r="42"
          />
          <circle
            className="cds--loading__stroke"
            cx="50%"
            cy="50%"
            r="42"
          />
        </svg>
      </div>
    </Loading>
  </PolicyProfileForm>
</Provider>
`;
